@@ -244,6 +244,8 @@ Version 2.0.0rc4 - The 'Rabbits and Mules love carrots' version.
 		  forgotten here.
 		* Patch to listctrl.cpp, was segfaulting in 2.5.1 when
 		  hiding/resizing columns. In 2.4.2 was just asserting.
+		* Patch to Partfile.cpp, workaround the socket == NULL bug, so
+		  that amule does not crash.
 
 	shakraw:
 		* Fixed the "remote connect" bug
